# tictactoe

./: CMakeLists.txt  board.c  board.h  main.c  manager.c  manager.h  resources.c  resources.h
include/: CMakeLists.txt  GDK.h  GDK_nodes.h
src/nodes/: CMakeLists.txt  node.c
test/: CMakeLists.txt
test/nodes/: CMakeLists.txt  test_node.cc
